--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,30 @@
 language: go
 
-sudo: false
+sudo: required
+
+services:
+    - docker
 
 go:
     - 1.6
     - 1.7
     - 1.8
     - 1.9
+    - "1.10"
+
+env:
+    global:
+        - GERRIT_URL=http://localhost:8080/
+    matrix:
+        - GERRIT_VERSION=2.11.9
+        - GERRIT_VERSION=2.12.7
+        - GERRIT_VERSION=2.13.9
+        - GERRIT_VERSION=2.14.5.1
+        - GERRIT_VERSION=latest
 
 before_install:
+  - sudo apt-get update -qq && sudo apt-get install -qq expect
+  - (cd docker && ./setup.sh)
   - make deps
 
 script:
